kubernetes/deploy-uat.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: global
  labels:
    app: global

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global
  labels:
    app: global
  namespace: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: global
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: global
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: global
        image: git.edenfarm.id:5050/project-version3/erp-dashboard/global/uat:<VERSION>
        ports:
          - name: http-port
            containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            memory: 50Mi
            cpu: 15m
          limits:
            memory: 350Mi
            cpu: 200m
        volumeMounts:
          - name: tz-config
            mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Jakarta
            type: File
      # tolerations:
      # - key: instance_type
      #   value: service
      #   effect: NoSchedule
      #   operator: Equal
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: role
      #           operator: In
      #           values:
      #           - devops
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: app
      #           operator: In
      #           values:
      #           - global
      #       topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: svc-global
  namespace: global
  labels:
    app: global
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http-port
  selector:
    app: global
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: global
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: global
spec:
  tls:
    - hosts:
        - uat-global.edenfarm.tech
      secretName: global-tls
  rules:
    - host: uat-global.edenfarm.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-global
                port:
                  number: 80
